z-index fixes

--- a/source/sass/6-pages/_page-groups-home.scss
+++ b/source/sass/6-pages/_page-groups-home.scss
@@ -17,7 +17,6 @@
                 display: flex;
                 margin: 0 16px;
                 width: 100%;
-                z-index: 11;
                 //max-width: 900px;
                 justify-content: flex-end;
                 .btn-login{
@@ -41,8 +40,10 @@
             z-index: 1;
             background: $main-contrast;
             transition: 0.2s ease;
+            z-index: 11;
             &.expanded{
-                top: 59px;
+                top: 58px;
+                //border-top: 3px solid white;
                 & + .wide-central-container{
                     top: 130px;
                 }
@@ -53,12 +54,12 @@
                 max-width: 500px;
                 .group-creation{
                     color: $main-contrast;
-                    height: 39px;
+                    height: 38px;
                     background: white;
-                    border-radius: 40px;
+                    border-radius: 0;
                     width: 100%;
                     text-align: left;
-                    padding: 0 16px;
+                    padding: 0 10px;
                     margin: 10px 0;
                 }
             }
